--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
 <!DOCTYPE html>
 <html>
-  
+  <head>
+    <meta charset="UFT-8">
+    <meta name="description=" content="Thomas Edison CTE HS Senior Projects">
+    <meta name="keywords" content="Thomas Edison, Thomas Edison CTE HS, Jamaica NY">
+    <meta name="author" content="Juan Delcid">
+
+    <title>
+      Thomas A. Edison CTE High School Period 5 & 6    
+    </title>
+  </head>
+
+  <body>
+    <h1>
+    
+    </h1>
+    <ul>
+      <li>homework</li>
+      <li>laundry</li>
+      <li>football</li>
+      <li>grocerys</li>
+    </ul>
+
+    <ul>
+      <li><a>Juans jQuery Game</li>
+    </ul>
+  </body>
 </html>
 </html>
