--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     
     </h1>
     <ul>
-      <li>homework</li>
+      <li></li>
       <li>laundry</li>
       <li>football</li>
       <li>grocerys</li>
     </ul>
 
     <ul>
-      <li><a>Juans jQuery Game</li>
+      <li><a href="https://hire-me-profile-juan-carlocar12.seniorspds-56-fall-2023.repl.co/">Juans Hire Me Profile</li>
     </ul>
   </body>
 </html>
