--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h1>
     <ul>
       <li></li>
-      <li>laundry</li>
+      <li a href="https://juanito2245.github.io/glitch/">School website</li></a>
       <li>football</li>
       <li>grocerys</li>
     </ul>
