--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
   </head>
 
   <body>
-    <h1>
-    
-    </h1>
+    <h1>Web Development/ All Work </h1>
     <ul>
       <li></li>
-      <li a href="https://juanito2245.github.io/glitch/">School website</li></a>
+      <li> <a href="https://juanito2245.github.io/glitch/">School website</a></li>
       <li>football</li>
       <li>grocerys</li>
     </ul>
