--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Web Development/ All Work </h1>
     <ul>
       <li></li>
-      <li> <a href="https://juanito2245.github.io/glitch/">School website</a></li>
+      <li><a href="https://juanito2245.github.io/glitch/">School website</li>
       <li>football</li>
       <li>grocerys</li>
     </ul>
