--- a/index.html
+++ b/index.html
@@ -1,28 +1,84 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UFT-8">
-    <meta name="description=" content="Thomas Edison CTE HS Senior Projects">
-    <meta name="keywords" content="Thomas Edison, Thomas Edison CTE HS, Jamaica NY">
-    <meta name="author" content="Juan Delcid">
-
-    <title>
-      Thomas A. Edison CTE High School Period 5 & 6    
-    </title>
-  </head>
-
-  <body>
-    <h1>Web Development/ All Work </h1>
-    <ul>
-      <li></li>
-      <li><a href="https://juanito2245.github.io/glitch/">School website</li>
-      <li>football</li>
-      <li>grocerys</li>
-    </ul>
-
-    <ul>
-      <li><a href="https://hire-me-profile-juan-carlocar12.seniorspds-56-fall-2023.repl.co/">Juans Hire Me Profile</li>
-    </ul>
-  </body>
-</html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #24292e;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+        .profile-info {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .profile-info img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-right: 20px;
+        }
+        .profile-info h1 {
+            margin: 0;
+        }
+        .bio {
+            margin-bottom: 20px;
+        }
+        .social-links {
+            display: flex;
+            list-style-type: none;
+            padding: 0;
+            justify-content: center;
+        }
+        .social-links li {
+            margin-right: 10px;
+        }
+        .social-links li:last-child {
+            margin-right: 0;
+        }
+        .social-links li a {
+            color: #24292e;
+            text-decoration: none;
+            font-size: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>My GitHub Profile</h1>
+    </header>
+    <main>
+        <div class="container">
+            <div class="profile-info">
+                <img src="https://avatars.githubusercontent.com/u/1?v=4" alt="Profile Picture">
+                <div>
+                    <h1>John Doe</h1>
+                    <p class="bio">Passionate developer exploring the world of coding!</p>
+                    <ul class="social-links">
+                        <li><a href="https://github.com/johndoe" target="_blank">GitHub</a></li>
+                        <!-- Add more social links here -->
+                    </ul>
+                </div>
+            </div>
+            <!-- Add more sections here such as repositories, activity, etc. -->
+        </div>
+    </main>
+</body>
 </html>
