--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     <main>
         <div class="container">
             <div class="profile-info">
-                <img src="https://avatars.githubusercontent.com/u/1?v=4" alt="Profile Picture">
+                <img src="" alt="Profile Picture">
                 <div>
-                    <h1>John Doe</h1>
-                    <p class="bio">Passionate developer exploring the world of coding!</p>
+                    <h1>Juan Delcid</h1>
+                    <p class="bio">I'm a current senior of the year 2024 and this is my portfolio which includes all my projects that I have worked on either on my own or with groups.</p>
                     <ul class="social-links">
                         <li><a href="https://github.com/johndoe" target="_blank">GitHub</a></li>
-                        <!-- Add more social links here -->
+                        <li><a href="https://thomas-edison-website.glitch.me" target="_blank">Thomas Edison Website</a></li>
                     </ul>
                 </div>
             </div>
