--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                        <h3><li><a href="https://thomas-edison-website.glitch.me" target="_blank">Thomas Edison Website</a></li></h3></ul>
                     <p>The task that was given was to create a working school website using everything we know and looking at examples of what our current school website was. With this task it was looked upon by Ms.Cruz to see what ideas or if the whole website could replace the school website that way it stays fresh and doesn't get repetitive.</p>
                   <ul class="social-links">   
-                    <h3><li><a href="https://d1434ff1-1fda-4bba-918e-396defdcb8a1-00-32d5hu7eu7y63.kirk.replit.dev/" target="_blank">MVP Social Issues</a></li></h3></ul>
+                    <h3><li><a href="https://juanito2245.github.io/MVPProject/" target="_blank">MVP Social Issues</a></li></h3></ul>
                       <p>For this task I worked with 2 other group members to pick a social issue and basically create either a website or app that wasn't fully developed in a short amount of time to introduce what work could've been done with more time given.</p>
                 <ul class="social-links">    
                   <h3><li><a href="https://abcfa659-c2fb-4b07-8f23-8d1c5dc5c559-00-2mv9ibf3uf6pk.worf.replit.dev/" target="_blank">Hire Me Profile</a></li></h3></ul>
