--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <h3><li><a href="https://abcfa659-c2fb-4b07-8f23-8d1c5dc5c559-00-2mv9ibf3uf6pk.worf.replit.dev/" target="_blank">Hire Me Profile</a></li></h3></ul>
                     <p>This task was asking for me to meet with a fellow student in our class, preferably someone who I didn’t talk to on a daily basis. That classmate would then be my client and I would have to create a website to the best of my abilities and present them in a respectful and professional manner.</p>
                   <ul class="social-links">      
-                  <h3><li><a href="https://b10d35e9-b385-4f1a-ae57-a2036bd3304c-00-3ez8xx0jd4hk5.kirk.replit.dev/" target="_blank">Social Media Page</a></li></h3></ul>
+                  <h3><li><a href="https://juanito2245.github.io/Project/" target="_blank">Social Media Page</a></li></h3></ul>
                     <p>This task was worked on by me and another student and it was to create a social media page for a celebrity or content creator we had interests in.</p>
                 </div>
             </div>
