--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h3><li><a href="https://juanito2245.github.io/MVPProject/" target="_blank">MVP Social Issues</a></li></h3></ul>
                       <p>For this task I worked with 2 other group members to pick a social issue and basically create either a website or app that wasn't fully developed in a short amount of time to introduce what work could've been done with more time given.</p>
                 <ul class="social-links">    
-                  <h3><li><a href="https://abcfa659-c2fb-4b07-8f23-8d1c5dc5c559-00-2mv9ibf3uf6pk.worf.replit.dev/" target="_blank">Hire Me Profile</a></li></h3></ul>
+                  <h3><li><a href="https://juanito2245.github.io/Hire-Me-Profile-Juan-CarloCar12/" target="_blank">Hire Me Profile</a></li></h3></ul>
                     <p>This task was asking for me to meet with a fellow student in our class, preferably someone who I didn’t talk to on a daily basis. That classmate would then be my client and I would have to create a website to the best of my abilities and present them in a respectful and professional manner.</p>
                   <ul class="social-links">      
                   <h3><li><a href="https://juanito2245.github.io/Project/" target="_blank">Social Media Page</a></li></h3></ul>
