--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>My Senior Portfolio</title>
+</head>
+<body>
+    <header>
+        <h1>My Senior Portfolio</h1>
+      <div class="topnav">
+  <a href="index.html">About Me</a>
+  <a href="contact.html">Contact Information</a>
+  <a href="projects.html">Projects</a>
+</div>
+    </header>
+    <main>
+        <div class="container">
+              <h2>My Contact Information</h2>
+              <p>My contact Information are to be used for business inquiries only. My email is juancarlod@nycstudents.net, please be advised that responses won't be instant and for further contact information we have to keep in touch. Below is a link of my linkedin profile that would give some information you would like to know about me when it comes to the work force.</p>
+          <div class="link">
+            <a href="https://www.linkedin.com/in/juan-carlo-delcid-4a2172221/" target="_blank">Linkedin</a>
+       </div>
+      </div>
+    </main>
+</body>
+</html>
