--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1>My Senior Portfolio</h1>
+        <div class="topnav">
+            <a href="index.html">About Me</a>
+            <a href="contact.html">Contact Information</a>
+            <a href="projects.html">Projects</a>
+        </div>
     </header>
     <main>
         <div class="container">
