--- a/index.html
+++ b/index.html
@@ -24,19 +24,11 @@
                     <p class="bio">My name is Juan Delcid and I'm a current senior of the year 2024 and this is my portfolio for this year of my CTE course which is Web/App Development. This porfolio includes some information about me and as well as all my projects that I have worked on either on my own or with groups.</p>
                   <h2>Things To Know About Me</h2>
                   <p class="bio">I'm personally not a big fan of coding but it is good to understand such skills that can provide you with an advantage in a technological advanced world. I learn best with examples and using hands on and visualizing the steps, I'm confident when it comes to public speaking especially if it's on a topic I'm well aware of. My favorite subject in school was always math, I think pre calc is definitely one of those classes I enjoyed the most. I enjoy listening to music for most of my activities, I spend my free time either out with my friends, playing video games, or sleeping because it is important that you take a rest from time to time. I'm from Ecuador and El Salvador, favorite dishes from those countries are ceviche and pupusas. That basically covers it and one last thing I would want to leave you guys off with is enjoy your highschool years, don't just think about handing in assignments all the time actually engage yourself in projects, in clubs whether it is for sports or music or even to hangout with friends, go to the trips your classes go to, and don't rush it because you will genuinely miss it all.</p>
-                  <h2>Projects I'm Involved In:</h2>  
-                  <ul class="social-links">
-                       <h3><li><a href="https://thomas-edison-website.glitch.me" target="_blank">Thomas Edison Website</a></li></h3></ul>
-                    <p>The task that was given was to create a working school website using everything we know and looking at examples of what our current school website was. With this task it was looked upon by Ms.Cruz to see what ideas or if the whole website could replace the school website that way it stays fresh and doesn't get repetitive.</p>
-                  <ul class="social-links">   
-                    <h3><li><a href="https://juanito2245.github.io/MVPProject/" target="_blank">MVP Social Issues</a></li></h3></ul>
-                      <p>For this task I worked with 2 other group members to pick a social issue and basically create either a website or app that wasn't fully developed in a short amount of time to introduce what work could've been done with more time given.</p>
-                <ul class="social-links">    
-                  <h3><li><a href="https://juanito2245.github.io/Hire-Me-Profile-Juan-CarloCar12/" target="_blank">Hire Me Profile</a></li></h3></ul>
-                    <p>This task was asking for me to meet with a fellow student in our class, preferably someone who I didn’t talk to on a daily basis. That classmate would then be my client and I would have to create a website to the best of my abilities and present them in a respectful and professional manner.</p>
-                  <ul class="social-links">      
-                  <h3><li><a href="https://juanito2245.github.io/Project/" target="_blank">Social Media Page</a></li></h3></ul>
-                    <p>This task was worked on by me and another student and it was to create a social media page for a celebrity or content creator we had interests in.</p>
+                    <h2>My Resume</h2>
+                  <p>Keep in mind this is only a pdf version of my current resume of 2024 and you can email me for updated versions of it as my experiences and activities expand.</p>
+            <div class="link">
+                  <a href="https://cdn.glitch.global/7466c04c-f711-451b-9749-327c36599b9e/Resume%20(1).pdf?v=1712107851731" target="_blank">Resume</a>
+                  </div>
                 </div>
             </div>
         </div>
