--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                   <p>Keep in mind this is only a pdf version of my current resume of 2024 and you can email me for updated versions of it as my experiences and activities expand.</p>
             <div class="link">
                   <a href="https://cdn.glitch.global/7466c04c-f711-451b-9749-327c36599b9e/Resume%20(1).pdf?v=1712107851731" target="_blank">Resume</a>
+                <a href="https://juanito2245.github.io/Gmetrix.io/"target="_blank">Gmetrix Progression</a>
                   </div>
                 </div>
             </div>
